SAK-27793 Issue with course grade calculation in GradebookService
git-svn-id: https://source.sakaiproject.org/svn/edu-services/trunk@312012 66ffb92e-73f9-0310-93c1-f5514f145a0a